--- a/Conjugate/TenseTableViewCell.xib
+++ b/Conjugate/TenseTableViewCell.xib
@@ -1,63 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TenseTableViewCell" customModule="Conjugate" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="IJA-hW-da7" customClass="TenseTableViewCell" customModule="Conjugate" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="er/sie/es" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tly-lc-TTW">
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="GTf-Pd-zCQ"/>
-                        <constraint firstAttribute="width" constant="80" id="yuW-Y6-ZnO"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="haben" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jsH-AT-ArY">
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="16V-JZ-b9w"/>
-                        <constraint firstAttribute="height" constant="21" id="c0P-NF-ULP"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V8c-02-BXM" customClass="AnimatedButton" customModule="Conjugate" customModuleProvider="target">
-                    <constraints>
-                        <constraint firstAttribute="width" constant="44" id="0fV-zK-IOu"/>
-                        <constraint firstAttribute="height" constant="44" id="Gc9-uL-4Cw"/>
-                    </constraints>
-                    <state key="normal" image="speaker"/>
-                </button>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="tly-lc-TTW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="6Pw-ae-Az6"/>
-                <constraint firstItem="V8c-02-BXM" firstAttribute="leading" secondItem="jsH-AT-ArY" secondAttribute="trailing" constant="14" id="Cub-Rs-DHL"/>
-                <constraint firstItem="tly-lc-TTW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="Jub-LI-Hmf"/>
-                <constraint firstItem="jsH-AT-ArY" firstAttribute="leading" secondItem="tly-lc-TTW" secondAttribute="trailing" constant="8" id="Ryv-X0-2FF"/>
-                <constraint firstItem="V8c-02-BXM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SU3-Bv-JKE"/>
-                <constraint firstItem="jsH-AT-ArY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="Wz7-Mb-6wa"/>
-                <constraint firstAttribute="trailing" secondItem="V8c-02-BXM" secondAttribute="trailing" constant="15" id="uUz-Z7-CJE"/>
-                <constraint firstItem="jsH-AT-ArY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="xlm-QI-P5P"/>
-            </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IJA-hW-da7" id="KdT-yC-fD7">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="er/sie/es" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bB-Dv-HMW">
+                        <rect key="frame" x="8" y="11" width="80" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="Edf-mF-XS2"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnN-ll-pbG" customClass="AnimatedButton" customModule="Conjugate" customModuleProvider="target">
+                        <rect key="frame" x="310" y="-1" width="44" height="44"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="44" id="LrU-nk-eTI"/>
+                            <constraint firstAttribute="height" constant="44" id="gUE-JJ-8vo"/>
+                        </constraints>
+                        <state key="normal" image="speaker"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="haben" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mb-YR-kQq">
+                        <rect key="frame" x="96" y="11" width="200" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="6Mb-YR-kQq" firstAttribute="leading" secondItem="7bB-Dv-HMW" secondAttribute="trailing" constant="8" id="5BB-SF-lfq"/>
+                    <constraint firstItem="BnN-ll-pbG" firstAttribute="leading" secondItem="6Mb-YR-kQq" secondAttribute="trailing" constant="14" id="7bw-uh-vOv"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="7bB-Dv-HMW" secondAttribute="bottom" constant="3" id="Ez8-gR-XoY"/>
+                    <constraint firstItem="BnN-ll-pbG" firstAttribute="top" secondItem="KdT-yC-fD7" secondAttribute="top" constant="-1" id="HDg-9y-Lb0"/>
+                    <constraint firstItem="7bB-Dv-HMW" firstAttribute="leading" secondItem="KdT-yC-fD7" secondAttribute="leadingMargin" id="VJf-Vj-bUh"/>
+                    <constraint firstAttribute="bottom" secondItem="BnN-ll-pbG" secondAttribute="bottom" id="Zgt-AC-Whn"/>
+                    <constraint firstItem="7bB-Dv-HMW" firstAttribute="top" secondItem="KdT-yC-fD7" secondAttribute="topMargin" constant="3" id="bhj-HP-AVu"/>
+                    <constraint firstAttribute="trailing" secondItem="BnN-ll-pbG" secondAttribute="trailing" constant="21" id="nyu-Yd-QVW"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="6Mb-YR-kQq" secondAttribute="bottom" constant="3" id="wn3-k3-IyG"/>
+                    <constraint firstItem="6Mb-YR-kQq" firstAttribute="top" secondItem="KdT-yC-fD7" secondAttribute="topMargin" constant="3" id="y7B-Md-tID"/>
+                </constraints>
+            </tableViewCellContentView>
             <connections>
-                <outlet property="audioButton" destination="V8c-02-BXM" id="aaj-B2-RKk"/>
-                <outlet property="pronounLabel" destination="tly-lc-TTW" id="nGZ-AJ-brc"/>
-                <outlet property="verbLabel" destination="jsH-AT-ArY" id="Vkk-yO-Sr7"/>
+                <outlet property="audioButton" destination="BnN-ll-pbG" id="Gbl-wS-l1Z"/>
+                <outlet property="pronounLabel" destination="7bB-Dv-HMW" id="ovn-mc-Jxn"/>
+                <outlet property="verbLabel" destination="6Mb-YR-kQq" id="58v-Ef-tWB"/>
             </connections>
-            <point key="canvasLocation" x="-113.5" y="-121"/>
-        </view>
+            <point key="canvasLocation" x="-92" y="98"/>
+        </tableViewCell>
     </objects>
     <resources>
         <image name="speaker" width="33" height="23"/>
